# DUNE-tension

./: .gitignore  README.md  Tensiometer.py  audio_processing.py  cleaned_signal.npz  data_collection.py  gui_state.json  maestro.py  plot_cached_audio.py  pyproject.toml  reformatAudio.py  run.py  spectralFilter.py  tension_client.py  utilities.py
data/: frequency_data_US_APA5_G.csv  frequency_data_US_APA6_U.csv  frequency_data_US_APA6_V.csv  frequency_data_US_APA6_X.csv
filters/: noise_filter.npz  noise_filter_2025-02-19_11-56-40.npz
old_audio/: GA10_2025-02-17_12-02-57.npz  GA10_2025-02-17_12-02-59.npz  GA10_2025-02-17_12-03-00.npz  GA10_2025-02-17_12-03-02.npz  GA10_2025-02-17_12-03-03.npz  GA10_2025-02-17_12-03-04.npz  GA10_2025-02-17_12-03-06.npz  GA10_2025-02-17_12-03-07.npz  GA10_2025-02-17_12-03-08.npz  GA10_2025-02-17_12-03-10.npz  GA10_2025-02-17_12-03-11.npz  GA10_2025-02-17_12-03-13.npz  GA10_2025-02-17_12-03-14.npz  GA10_2025-02-17_12-03-16.npz  GA10_2025-02-17_12-03-17.npz  GA10_2025-02-17_12-03-18.npz  GA10_2025-02-17_12-03-20.npz  GA10_2025-02-17_12-03-21.npz  GA10_2025-02-17_12-03-22.npz  GA10_2025-02-17_12-03-24.npz  GA10_2025-02-17_12-03-25.npz  GA10_2025-02-17_12-03-26.npz  GA10_2025-02-17_12-03-28.npz  GA10_2025-02-17_12-03-29.npz  GA10_2025-02-17_12-03-30.npz  GA10_2025-02-17_12-03-32.npz  GA10_2025-02-17_12-03-33.npz  GA10_2025-02-17_12-03-35.npz  GA10_2025-02-17_12-03-36.npz  GA10_2025-02-17_12-03-37.npz  GA10_2025-02-17_12-03-39.npz  GA10_2025-02-17_12-03-40.npz  (+345 more)
rust/harmonic_comb/: Cargo.toml
rust/harmonic_comb/src/: lib.rs
(+26 files in other folders)
