[package]
name = "harmonic_comb"
version = "0.1.0"
edition = "2024"

[lib]
name = "harmonic_comb"
crate-type = ["cdylib"]

[dependencies]
cpal = "0.15"
num-complex = "0.4"
numpy = "0.20"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py39"] }
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }
realfft = "3.3"
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "sync"] }
